--- a/.github/workflows/deploy_aws.yml
+++ b/.github/workflows/deploy_aws.yml
@@ -1,34 +1,32 @@
-name: Deploy to EC2 via SSH
+name: Deploy (self-hosted)
 
 on:
   push:
-    branches: [ "main" ]  # зміни, якщо треба інша гілка
+    branches: [ "main" ]
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    # Під ці лейбли підбирається твій раннер
+    runs-on: [self-hosted, Linux, X64]
 
     steps:
-      - name: Checkout
+      # Клонує код у робочу теку раннера
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Deploy over SSH
-        uses: appleboy/ssh-action@v1.2.0
-        env:
-          APP_DIR: /home/ubuntu/geoai      
-          BRANCH: main                     
-        with:
-          host: ${{ secrets.SSH_HOST }}    
-          username: ${{ secrets.SSH_USER }}# ubuntu
-          key: ${{ secrets.SSH_KEY }}      
-          port: 22
-          script: |
-            set -e
-            cd "$APP_DIR"
-            git fetch --all
-            git checkout "$BRANCH"
-            git pull --rebase origin "$BRANCH"
-            # якщо збираєш локально на сервері:
-            docker compose pull || true
-            docker compose up -d --build
-            docker image prune -f || true
+      # Логування версії Docker (для діагностики)
+      - name: Show Docker info
+        run: |
+          docker --version
+          docker compose version || true
+
+      # Запускаємо/перезапускаємо сервіси
+      # Виконується у корені репозиторію, який чекнув раннер
+      - name: Deploy with Docker Compose
+        working-directory: ${{ github.workspace }}
+        run: |
+          set -e
+          # якщо потрібні секрети/ENV — створюй тут .env або використовуй secrets
+          docker compose pull || true
+          docker compose up -d --build
+          docker image prune -f || true
