--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: "3.9"
+
+
 services:
   postgis:
     build: ./services/postgis
@@ -10,31 +11,40 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./services/postgis/init:/docker-entrypoint-initdb.d
     ports:
-      - "5432:5432"
+      - "55432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 3s
       retries: 15
+    networks: [web]
+
+
 
   terracotta:
-    build: ./services/terracotta
+    build: ./services/tc_app
     environment:
-      TC_DRIVER: "file"
+      COG_DATA_DIR: /app/data/cogs
+      TC_DB: /app/tc_db/terracotta.sqlite
+      TC_PORT: 5000
+      TC_HOST: 0.0.0.0
     volumes:
-      - ./data/cogs:${COG_DATA_DIR}:ro
-    ports:
-      - "5000:5000"
+      - ./data/cogs:/app/data/cogs:ro
+      - tcdb:/app/tc_db
+    ports: ["5050:5000"]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 10s
       timeout: 3s
       retries: 15
+    networks: [web]
 
   api:
-    build: ./services/api
+    build:
+         context: .
+         dockerfile: services/api/Dockerfile
     environment:
-      POSTGRES_URL: ${POSTGRES_URL}
+      POSTGRES_URL: postgresql+psycopg://postgres:${POSTGRES_PASSWORD}@postgis:5432/${POSTGRES_DB}
       TERRACOTTA_URL: ${TERRACOTTA_URL}
       DEFAULT_DEMS: ${DEFAULT_DEMS}
       SLOPE_LAYER: ${SLOPE_LAYER}
@@ -46,24 +56,57 @@ services:
         condition: service_healthy
     ports:
       - "${API_PORT}:8000"
+    networks: [web]
+    volumes:
+       - ./data_parqet:/data:ro
+
 
   dash:
-    build: ./services/dash
-    environment:
-      API_URL: http://api:8000
-    depends_on:
-      - api
-    ports:
-      - "${DASH_PORT}:8050"
+     build:
+       context: ./services/dash
+       target: dash
+     environment:
+       API_URL: http://api:8000
+       MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN:-}
+     depends_on:
+       api:
+         condition: service_started
+     ports:
+       - "${DASH_PORT}:8050"
+     restart: unless-stopped
+     networks: [web]
+     volumes:
+         - ./data_parqet:/app/data:ro
 
   nginx:
-    build: ./services/nginx
-    depends_on:
-      - dash
-      - api
-      - terracotta
+    image: nginx:stable
+    container_name: geoai-nginx
     ports:
-      - "${NGINX_PORT}:80"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./services/nginx/nginx.http.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/www:/var/www/certbot:ro
+      - certs:/etc/letsencrypt:ro
+    restart: unless-stopped
+    networks: [web]
+
+
+  # одноразовий запуск для випуску серта (ручний запуск командою нижче)
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - certs:/etc/letsencrypt
+    entrypoint: /bin/sh
+    networks: [web]
+
+    # Команди запускатимеш вручну через `docker compose run --rm certbot ...`
 
 volumes:
   pgdata:
+  certs:
+  tcdb:
+
+networks:
+  web: {}
