--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ media/
 uploads/
 models/
 checkpoints/
+data_parqet/
+certbot/
 *.tif
 *.tiff
 *.parquet
@@ -31,6 +33,57 @@ build/
 *.log
 
 # === Env & secrets (не клади в git взагалі) ===
+.env
+.env.*
+*.pem
+*.key
+
+# === IDE ===
+.vscode/
+.idea/
+
+
+EOF
+
+# прибираємо з ІНДЕКСУ (на диску файли лишаються)
+git rm -r --cached data/ db/data/ tiles/ cache/ media/ uploads/ models/ checkpoints/ 2>/dev/null || true
+git rm --cached *.tif *.tiff *.parquet *.zip *.7z *.tar *.tar.gz *.pt *.pth *.ckpt *.onnx *.h5 2>/dev/null || true
+
+git add .gitignore
+git commit -m "chore: ignore large data & artifacts; stop tracking them"
+
+# === Large data & artifacts ===
+data/
+db/data/
+tiles/
+cache/
+media/
+uploads/
+models/
+checkpoints/
+*.tif
+*.tiff
+*.parquet
+*.zip
+*.7z
+*.tar
+*.tar.gz
+*.pt
+*.pth
+*.ckpt
+*.onnx
+*.h5
+
+# === Runtime / build ===
+__pycache__/
+*.pyc
+.ipynb_checkpoints/
+node_modules/
+dist/
+build/
+*.log
+
+# === Env & secrets ===
 .env
 .env.*
 *.pem
