--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -27,9 +27,9 @@ http {
 
   # ---- HTTPS (443): основні сервіси
   server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name geohydroai.org www.geohydroai.org;
-    http2 on;         # окремою директивою
 
 
     # Шляхи до сертифікатів (ми їх покладемо в /etc/nginx/certs/live/...)
