--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
     volumes:
       - ./data/cogs:/app/data/cogs:ro
       - tcdb:/app/tc_db
-    ports: ["5050:5000"]
+    expose:
+      - "5000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 10s
@@ -54,7 +55,7 @@ services:
         condition: service_healthy
       terracotta:
         condition: service_healthy
-    ports:
+    expose:
       - "${API_PORT}:8000"
     networks: [web]
     volumes:
@@ -71,7 +72,7 @@ services:
      depends_on:
        api:
          condition: service_started
-     ports:
+     expose:
        - "${DASH_PORT}:8050"
      restart: unless-stopped
      networks: [web]
@@ -85,7 +86,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./services/nginx/nginx.http.conf:/etc/nginx/nginx.conf:ro
+      - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www:/var/www/certbot:ro
       - certs:/etc/letsencrypt:ro
     restart: unless-stopped
@@ -100,6 +101,14 @@ services:
       - certs:/etc/letsencrypt
     entrypoint: /bin/sh
     networks: [web]
+
+  certbot-renewer:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - certs:/etc/letsencrypt
+    entrypoint: /bin/sh -c 'while :; do certbot renew --webroot -w /var/www/certbot --quiet --deploy-hook "nginx -s reload"; sleep 12h; done'
+    networks: [ web ]
 
     # Команди запускатимеш вручну через `docker compose run --rm certbot ...`
 
