--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -52,12 +52,24 @@ http {
 
     # FastAPI
     location ^~ /api/ {
-      proxy_pass http://api:8000;
+      proxy_pass http://api:8000/;
     }
 
     # Terracotta
+    # Terracotta (path-based proxy)
     location ^~ /tc/ {
-      proxy_pass http://terracotta:5000;
-    }
+    proxy_pass         http://terracotta:5000/;  # ← ВАЖЛИВО: слеш у кінці!
+    proxy_http_version 1.1;
+    proxy_set_header   Host $host;
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto $scheme;
+
+    # опційно, якщо буде інший домен для фронта
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods GET,HEAD,OPTIONS;
+    add_header Access-Control-Allow-Headers *;
+}
+
   }
 }
