--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
      environment:
        API_URL: http://api:8000
        MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN:-}
+       TERRACOTTA_PUBLIC_URL: https://www.geohydroai.org/tc
      depends_on:
        api:
          condition: service_started
