--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -25,7 +25,11 @@ http {
     # Все інше на HTTPS
     return 301 https://$host$request_uri;
   }
-
+map $http_origin $cors_allow_origin {
+    default "";
+    "https://geohydroai.org"      $http_origin;
+    "https://www.geohydroai.org"  $http_origin;
+}
   # ---- HTTPS (443): основні сервіси
   server {
     listen 443 ssl;
@@ -57,20 +61,34 @@ http {
     }
 
     # Terracotta
-    # Terracotta (path-based proxy)
     location ^~ /tc/ {
-    proxy_pass         http://terracotta:5000/;  # ← ВАЖЛИВО: слеш у кінці!
+    proxy_pass         http://terracotta:5000/;
     proxy_http_version 1.1;
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Proto $scheme;
 
-    # опційно, якщо буде інший домен для фронта
-    add_header Access-Control-Allow-Origin *;
-    add_header Access-Control-Allow-Methods GET,HEAD,OPTIONS;
-    add_header Access-Control-Allow-Headers *;
+    # --- CORS ---
+    # Preflight
+    if ($request_method = OPTIONS) {
+        add_header Access-Control-Allow-Origin  $cors_allow_origin always;
+        add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
+        add_header Access-Control-Max-Age       86400 always;
+        add_header Vary "Origin" always;
+        return 204;
+    }
+
+    # Для звичайних GET/HEAD
+    add_header Access-Control-Allow-Origin  $cors_allow_origin always;
+    add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
+    add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
+    add_header Vary "Origin" always;
+
+    # (не виставляємо credentials, cookies не потрібні для тайлів)
 }
+
 
   }
 }
