--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
      environment:
        API_URL: http://api:8000
        MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN:-}
-       TERRACOTTA_PUBLIC_URL: https://www.geohydroai.org/tc
+       TERRACOTTA_PUBLIC_URL: https://geohydroai.org/tc
        LOG_LEVEL: DEBUG
        DATA_DIR: /app/data/parquet
      depends_on:
