--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www:/var/www/certbot:ro
       - certs:/etc/letsencrypt:ro
+      - /var/www/geoai-front:/var/www/geoai-front:ro
     restart: unless-stopped
     networks: [web]
 
