--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -11,6 +11,8 @@ http {
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header Connection "";
   resolver 127.0.0.11 valid=30s ipv6=off;
+  include       /etc/nginx/mime.types;   # <- обов’язково
+  default_type  application/octet-stream;
 
   # ---- HTTP (80): ACME + редірект на HTTPS
   server {
