--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -61,22 +61,29 @@ map $http_origin $cors_allow_origin {
     location ^~ /api/ {
       proxy_pass http://api:8000/;
     }
-    location /flood_scenarios/ {
-    alias /var/www/geoai-front/current/;
-    # Vite SPA: index.html на всі роутинг-запити в цій підпапці
-    try_files $uri $uri/ /flood_scenarios/index.html;
 
-    # Кешування: ассети з хешами можна довго кешувати
-    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+    # 1. Обробка SPA-роутингу для /flood_scenarios/
+    location /flood_scenarios/ {
+        alias /var/www/geoai-front/current/;
+        try_files $uri $uri/ /flood_scenarios/index.html;
+    }
+
+    # 2. Окремий блок для кешування статичних файлів усередині /flood_scenarios/
+    # Він більше не вкладений!
+    location ~* ^/flood_scenarios/.*\.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+        alias /var/www/geoai-front/current/;
         expires 7d;
         add_header Cache-Control "public, max-age=604800, immutable";
         access_log off;
     }
-    # Але index.html — коротко кешуємо (щоб реліз підхоплювався)
+
+    # 3. Окреме правило для index.html, щоб він не кешувався надовго
     location = /flood_scenarios/index.html {
+        alias /var/www/geoai-front/current/;
         add_header Cache-Control "no-cache";
     }
-}
+
+
     # Terracotta
     location ^~ /tc/ {
     proxy_pass         http://terracotta:5000/;
