--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -63,26 +63,31 @@ map $http_origin $cors_allow_origin {
     }
 
     # 1. Обробка SPA-роутингу для /flood_scenarios/
+   # SPA роутинг
+  # SPA роутинг
     location /flood_scenarios/ {
         alias /var/www/geoai-front/current/;
         try_files $uri $uri/ /flood_scenarios/index.html;
+        add_header X-Which "spa-prefix" always;
     }
 
-    # 2. Окремий блок для кешування статичних файлів усередині /flood_scenarios/
-    # Він більше не вкладений!
-    location ~* ^/flood_scenarios/.*\.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+    # Статика з примусовими MIME
+    location ~* ^/flood_scenarios/.*\.(mjs|js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
         alias /var/www/geoai-front/current/;
+        types {
+            application/javascript  js mjs;
+            text/css                css;
+            image/png               png;
+            image/jpeg              jpg jpeg;
+            image/svg+xml           svg;
+            image/x-icon            ico;
+            font/woff2              woff2;
+        }
         expires 7d;
         add_header Cache-Control "public, max-age=604800, immutable";
+        add_header X-Which "static-regex" always;
         access_log off;
     }
-
-    # 3. Окреме правило для index.html, щоб він не кешувався надовго
-    location = /flood_scenarios/index.html {
-        alias /var/www/geoai-front/current/;
-        add_header Cache-Control "no-cache";
-    }
-
 
     # Terracotta
     location ^~ /tc/ {
