--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -3,47 +3,46 @@
 events {}
 
 http {
-  # ---- Універсальні налаштування проксі (можна підкрутити за потреби)
+  # --- базове
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
   proxy_http_version 1.1;
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header Connection "";
-  resolver 127.0.0.11 valid=30s ipv6=off;
-  include       /etc/nginx/mime.types;   # <- обов’язково
-  default_type  application/octet-stream;
 
-  # ---- HTTP (80): ACME + редірект на HTTPS
+  resolver 127.0.0.11 valid=30s ipv6=off;
+
+  # --- HTTP→HTTPS + ACME
   server {
     listen 80;
     server_name geohydroai.org www.geohydroai.org;
 
-    # Папка для ACME webroot (Let’s Encrypt)
     location ^~ /.well-known/acme-challenge/ {
       root /var/www/certbot;
     }
 
-    # Все інше на HTTPS
     return 301 https://$host$request_uri;
   }
-map $http_origin $cors_allow_origin {
+
+  # --- CORS для Terracotta
+  map $http_origin $cors_allow_origin {
     default "";
     "https://geohydroai.org"      $http_origin;
     "https://www.geohydroai.org"  $http_origin;
-}
-  # ---- HTTPS (443): основні сервіси
+  }
+
+  # --- HTTPS
   server {
-    listen 443 ssl;
-    http2 on;
+    listen 443 ssl http2;
     server_name geohydroai.org www.geohydroai.org;
 
-
-    # Шляхи до сертифікатів (ми їх покладемо в /etc/nginx/certs/live/...)
     ssl_certificate     /etc/letsencrypt/live/www.geohydroai.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.geohydroai.org/privkey.pem;
 
-    # Рекомендовано: великі запити/відповіді
     client_max_body_size 2048M;
     proxy_read_timeout   3600s;
     proxy_send_timeout   3600s;
@@ -51,73 +50,70 @@ map $http_origin $cors_allow_origin {
     proxy_request_buffering off;
     add_header X-Accel-Buffering no always;
 
-    # Dash (головна)
+    # --- health
     location = /healthz { proxy_pass http://api:8000/healthz; }
+
+    # --- головна (Dash)
     location / {
       proxy_pass http://dash:8050/;
     }
 
-    # FastAPI
+    # --- FastAPI
     location ^~ /api/ {
       proxy_pass http://api:8000/;
     }
 
-    # 1. Обробка SPA-роутингу для /flood_scenarios/
-   # SPA роутинг
-  # SPA роутинг
+    # --- SPA: /flood_scenarios/ (єдина локація)
+    #   - alias на релізи
+    #   - try_files для SPA-роутингу
+    #   - ПРИМУСОВІ MIME для статичних розширень (лікує text/plain)
     location /flood_scenarios/ {
-        alias /var/www/geoai-front/current/;
-        try_files $uri $uri/ /flood_scenarios/index.html;
-        add_header X-Which "spa-prefix" always;
-    }
+      alias /var/www/geoai-front/current/;
+      try_files $uri $uri/ /flood_scenarios/index.html;
 
-    # Статика з примусовими MIME
-    location ~* ^/flood_scenarios/.*\.(mjs|js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
-        alias /var/www/geoai-front/current/;
-        types {
-            application/javascript  js mjs;
-            text/css                css;
-            image/png               png;
-            image/jpeg              jpg jpeg;
-            image/svg+xml           svg;
-            image/x-icon            ico;
-            font/woff2              woff2;
-        }
+      types {
+        application/javascript  js mjs;
+        text/css                css;
+        image/png               png;
+        image/jpeg              jpg jpeg;
+        image/svg+xml           svg;
+        image/x-icon            ico;
+        font/woff2              woff2;
+      }
+
+      # кеш для статичних файлів
+      if ($request_uri ~* \.(mjs|js|css|png|jpg|jpeg|gif|svg|ico|woff2)$) {
         expires 7d;
         add_header Cache-Control "public, max-age=604800, immutable";
-        add_header X-Which "static-regex" always;
-        access_log off;
+      }
+
+      add_header X-Which "spa-prefix" always;
     }
 
-    # Terracotta
+    # --- Terracotta тайли з CORS
     location ^~ /tc/ {
-    proxy_pass         http://terracotta:5000/;
-    proxy_http_version 1.1;
-    proxy_set_header   Host $host;
-    proxy_set_header   X-Real-IP $remote_addr;
-    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_pass         http://terracotta:5000/;
+      proxy_http_version 1.1;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
 
-    # --- CORS ---
-    # Preflight
-    if ($request_method = OPTIONS) {
+      # Preflight
+      if ($request_method = OPTIONS) {
         add_header Access-Control-Allow-Origin  $cors_allow_origin always;
         add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
         add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
         add_header Access-Control-Max-Age       86400 always;
         add_header Vary "Origin" always;
         return 204;
+      }
+
+      # GET/HEAD
+      add_header Access-Control-Allow-Origin  $cors_allow_origin always;
+      add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
+      add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
+      add_header Vary "Origin" always;
     }
-
-    # Для звичайних GET/HEAD
-    add_header Access-Control-Allow-Origin  $cors_allow_origin always;
-    add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
-    add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
-    add_header Vary "Origin" always;
-
-    # (не виставляємо credentials, cookies не потрібні для тайлів)
-}
-
-
   }
 }
