--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -72,6 +72,7 @@ http {
       try_files $uri $uri/ /flood_scenarios/index.html;
 
       types {
+        text/html               html;
         application/javascript  js mjs;
         text/css                css;
         image/png               png;
