--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -63,33 +63,16 @@ http {
       proxy_pass http://api:8000/;
     }
 
-    # --- SPA: /flood_scenarios/ (єдина локація)
-    #   - alias на релізи
-    #   - try_files для SPA-роутингу
-    #   - ПРИМУСОВІ MIME для статичних розширень (лікує text/plain)
     location /flood_scenarios/ {
       alias /var/www/geoai-front/current/;
+      index index.html;
       try_files $uri $uri/ /flood_scenarios/index.html;
-
-      types {
-        text/html               html;
-        application/javascript  js mjs;
-        text/css                css;
-        image/png               png;
-        image/jpeg              jpg jpeg;
-        image/svg+xml           svg;
-        image/x-icon            ico;
-        font/woff2              woff2;
-      }
-
-      # кеш для статичних файлів
       if ($request_uri ~* \.(mjs|js|css|png|jpg|jpeg|gif|svg|ico|woff2)$) {
         expires 7d;
         add_header Cache-Control "public, max-age=604800, immutable";
       }
-
-      add_header X-Which "spa-prefix" always;
-    }
+            add_header X-Which "spa-prefix" always;
+       }
 
     # --- Terracotta тайли з CORS
     location ^~ /tc/ {
