--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -63,17 +63,34 @@ http {
       proxy_pass http://api:8000/;
     }
 
+      # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
+
+    # Блок №1: Обробка SPA-роутингу.
+    # Спрацьовує для шляхів типу /flood_scenarios/some/route
+    # і віддає index.html, щоб React Router міг працювати.
     location /flood_scenarios/ {
-      alias /var/www/geoai-front/current/;
-      index index.html;
-      try_files $uri $uri/ /flood_scenarios/index.html;
-      if ($request_uri ~* \.(mjs|js|css|png|jpg|jpeg|gif|svg|ico|woff2)$) {
+             alias /var/www/geoai-front/current/;
+              try_files $uri $uri/ /flood_scenarios/index.html;
+    }
+
+    # Блок №2: Обробка статичних файлів (ассетів).
+    # Nginx обере цей блок для запитів до /flood_scenarios/assets/*, бо він є більш точним.
+    # Він правильно знаходить файли і встановлює довгий час кешування.
+    location /flood_scenarios/assets/ {
+        alias /var/www/geoai-front/current/assets/;
         expires 7d;
         add_header Cache-Control "public, max-age=604800, immutable";
-      }
-            add_header X-Which "spa-prefix" always;
-       }
+        access_log off;
+    }
 
+    # Блок №3: Окреме правило для самого index.html.
+    # Забороняє браузеру надовго кешувати головний файл, щоб оновлення підхоплювались одразу.
+    location = /flood_scenarios/index.html {
+        alias /var/www/geoai-front/current/index.html;
+        add_header Cache-Control "no-cache";
+    }
+
+    # -----------------------------------------------
     # --- Terracotta тайли з CORS
     location ^~ /tc/ {
       proxy_pass         http://terracotta:5000/;
