--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -37,7 +37,8 @@ http {
 
   # --- HTTPS
   server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name geohydroai.org www.geohydroai.org;
 
     ssl_certificate     /etc/letsencrypt/live/www.geohydroai.org/fullchain.pem;
