--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -90,7 +90,8 @@ http {
         alias /var/www/geoai-front/current/index.html;
         add_header Cache-Control "no-cache";
     }
-
+    location = /flood-dem-diif     { return 302 /flood_scenarios/; }
+    location = /flood-dem-diif/    { return 302 /flood_scenarios/; }
     # -----------------------------------------------
     # --- Terracotta тайли з CORS
     location ^~ /tc/ {
