--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       terracotta:
         condition: service_healthy
     expose:
-      - "${API_PORT}:8000"
+      - "${API_PORT:-8000}}:8000"
     networks: [web]
     volumes:
       - ./data/parquet:/app/data/parquet:ro   # <-- тут твій layers_index.json
