--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
     proxy_buffering      off;
     proxy_request_buffering off;
     add_header X-Accel-Buffering no always;
-
+    merge_slashes on;
     # --- health
     location = /healthz { proxy_pass http://api:8000/healthz; }
 
