--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,7 @@ services:
       TC_DB: /app/tc_db/terracotta.sqlite
       TC_PORT: 5000
       TC_HOST: 0.0.0.0
-      TC_RESAMPLING_METHOD: bilinear
-
+      RESAMPLING_METHOD: linear
     volumes:
       - ./data/cogs:/app/data/cogs:ro
       - tcdb:/app/tc_db
