api doc comit docker api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,10 +44,8 @@ services:
 
   api:
     build:
-         context: .
-         dockerfile: services/api/Dockerfile
+         context: ./services/api
     environment:
-      ENV PYTHONPATH: /app
       POSTGRES_URL: postgresql+psycopg://postgres:${POSTGRES_PASSWORD}@postgis:5432/${POSTGRES_DB}
       TERRACOTTA_URL: ${TERRACOTTA_URL}
       DEFAULT_DEMS: ${DEFAULT_DEMS}
