api doc comit 1

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -64,6 +64,20 @@ http {
     }
     location = /healthz { proxy_pass http://api:8000/healthz; }
 
+    # Add specific rules for the documentation endpoints
+    location = /api/docs {
+        proxy_pass http://api:8000/docs;
+    }
+
+    location = /api/redoc {
+        proxy_pass http://api:8000/redoc;
+    }
+
+    # Add the openapi.json rule as well, as it's needed for docs
+    location = /api/openapi.json {
+        proxy_pass http://api:8000/openapi.json;
+    }
+
 
       # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
 
