--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -45,12 +45,12 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/www.geohydroai.org/privkey.pem;
 
     client_max_body_size 2048M;
-    proxy_read_timeout   3600s;
-    proxy_send_timeout   3600s;
-    proxy_buffering      off;
-    proxy_request_buffering off;
-    add_header X-Accel-Buffering no always;
-    merge_slashes on;
+#     proxy_read_timeout   3600s;
+#     proxy_send_timeout   3600s;
+#     proxy_buffering      off;
+#     proxy_request_buffering off;
+#     add_header X-Accel-Buffering no always;
+#     merge_slashes on;
     # --- health
 
     # --- головна (Dash)
@@ -59,23 +59,43 @@ http {
     }
 
     # --- FastAPI
+   # ------------------------------------------------------------------
+    # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
     location ^~ /api/ {
-      proxy_pass http://api:8000/;
-    }
-    location = /healthz { proxy_pass http://api:8000/healthz; }
+      proxy_pass http://api:8000;   # БЕЗ кінцевого /, щоб зберегти /api/
 
-    # Add specific rules for the documentation endpoints
-    location = /api/docs {
-        proxy_pass http://api:8000/docs;
+      # Налаштування буферизації та тайм-аутів для довгих операцій
+      proxy_buffering off;
+      proxy_request_buffering off;
+      add_header X-Accel-Buffering no always;
+
+      proxy_read_timeout 3600s;
+      proxy_send_timeout 3600s;
+
+      # Налаштування для стиснення та передачі даних
+      chunked_transfer_encoding on;
+      gzip off; # Вимикаємо Nginx Gzip, бо FastAPI робить це сам
+
+      # Заголовки, які вже є в блоці http, можна не повторювати,
+      # але для надійності Keep-Alive:
+      proxy_set_header Connection "";
+    }
+    # ------------------------------------------------------------------
+
+
+    # ⚠️ Тільки openapi.json залишаємо окремо для Content-Type
+    location = /api/openapi.json {
+        proxy_pass http://api:8000/openapi.json;
+        add_header Content-Type application/json;
     }
 
-    location = /api/redoc {
-        proxy_pass http://api:8000/redoc;
-    }
+    location = /healthz { proxy_pass http://api:8000/healthz; } # Можна залишити для чистоти
+
 
     # Add the openapi.json rule as well, as it's needed for docs
     location = /api/openapi.json {
         proxy_pass http://api:8000/openapi.json;
+        add_header Content-Type application/json; # <--- ОСЬ ТУТ
     }
 
 
