--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -45,12 +45,12 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/www.geohydroai.org/privkey.pem;
 
     client_max_body_size 2048M;
-#     proxy_read_timeout   3600s;
-#     proxy_send_timeout   3600s;
-#     proxy_buffering      off;
-#     proxy_request_buffering off;
-#     add_header X-Accel-Buffering no always;
-#     merge_slashes on;
+    proxy_read_timeout   3600s;
+    proxy_send_timeout   3600s;
+    proxy_buffering      off;
+    proxy_request_buffering off;
+    add_header X-Accel-Buffering no always;
+    merge_slashes on;
     # --- health
 
     # --- головна (Dash)
@@ -62,7 +62,7 @@ http {
    # ------------------------------------------------------------------
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
     location ^~ /api/ {
-      proxy_pass http://api:8000;   # БЕЗ кінцевого /, щоб зберегти /api/
+      proxy_pass http://api:8000/;   # БЕЗ кінцевого /, щоб зберегти /api/
 
       # Налаштування буферизації та тайм-аутів для довгих операцій
       proxy_buffering off;
