--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -88,15 +88,10 @@ http {
         proxy_pass http://api:8000/openapi.json;
         add_header Content-Type application/json;
     }
+    location = /docs         { proxy_pass http://api:8000/docs; }
+    location = /redoc        { proxy_pass http://api:8000/redoc; }
 
     location = /healthz { proxy_pass http://api:8000/healthz; } # Можна залишити для чистоти
-
-
-#     # Add the openapi.json rule as well, as it's needed for docs
-#     location = /api/openapi.json {
-#         proxy_pass http://api:8000/openapi.json;
-#         add_header Content-Type application/json; # <--- ОСЬ ТУТ
-#     }
 
 
       # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
