--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -62,7 +62,7 @@ http {
    # ------------------------------------------------------------------
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
     location ^~ /api/ {
-      proxy_pass http://api:8000/;   # БЕЗ кінцевого /, щоб зберегти /api/
+      proxy_pass http://api:8000;   # БЕЗ кінцевого /, щоб зберегти /api/
 
       # Налаштування буферизації та тайм-аутів для довгих операцій
       proxy_buffering off;
