--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -61,27 +61,26 @@ http {
     # --- FastAPI
    # ------------------------------------------------------------------
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
+     # --- FastAPI (ОДИН блок для всього API-трафіку)
     location ^~ /api/ {
-      proxy_pass http://api:8000;   # БЕЗ кінцевого /, щоб зберегти /api/
+        # Важливо: використовуємо повне ім'я сервісу:порт і БЕЗ кінцевого `/`
+        proxy_pass http://api:8000;
 
-      # Налаштування буферизації та тайм-аутів для довгих операцій
-      proxy_buffering off;
-      proxy_request_buffering off;
-      add_header X-Accel-Buffering no always;
-
-      proxy_read_timeout 3600s;
-      proxy_send_timeout 3600s;
-
-      # Налаштування для стиснення та передачі даних
-      chunked_transfer_encoding on;
-      gzip off; # Вимикаємо Nginx Gzip, бо FastAPI робить це сам
-
-      # Заголовки, які вже є в блоці http, можна не повторювати,
-      # але для надійності Keep-Alive:
-      proxy_set_header Connection "";
+        # Заголовки, буферизація та тайм-аути
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        proxy_buffering off;
+        proxy_request_buffering off;
+        add_header X-Accel-Buffering no always;
+        chunked_transfer_encoding on;
+        gzip off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
     }
-    # ------------------------------------------------------------------
-
 
 # #     ⚠️ Тільки openapi.json залишаємо окремо для Content-Type
 #     location = /api/openapi.json {
