--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -64,7 +64,7 @@ http {
      # --- FastAPI (ОДИН блок для всього API-трафіку)
     location ^~ /api/ {
         # Важливо: використовуємо повне ім'я сервісу:порт і БЕЗ кінцевого `/`
-        proxy_pass http://api:8000;
+        proxy_pass http://api:8000/;
 
         # Заголовки, буферизація та тайм-аути
         proxy_http_version 1.1;
