--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -63,6 +63,7 @@ http {
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
      # --- FastAPI (ОДИН блок для всього API-трафіку)
     location ^~ /api/ {
+        rewrite /api/(.*) /$1 break;
         # Важливо: використовуємо повне ім'я сервісу:порт і БЕЗ кінцевого `/`
         proxy_pass http://api:8000/;
 
