--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -84,10 +84,10 @@ http {
     }
 
 # #     ⚠️ Тільки openapi.json залишаємо окремо для Content-Type
-#     location = /api/openapi.json {
-#         proxy_pass http://api:8000/openapi.json;
-#         add_header Content-Type application/json;
-#     }
+    location = /api/openapi.json {
+        proxy_pass http://api:8000/api/openapi.json;
+        add_header Content-Type application/json;
+    }
 
 
     location = /healthz { proxy_pass http://api:8000/healthz; } # Можна залишити для чистоти
