--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -82,6 +82,10 @@ http {
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
     }
+      location = /api/docs {
+        proxy_pass http://api:8000/api/docs;
+        add_header Content-Type application/json;
+    }
 
 # #     ⚠️ Тільки openapi.json залишаємо окремо для Content-Type
     location = /api/openapi.json {
