--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -15,6 +15,10 @@ http {
   proxy_set_header Connection "";
 
   resolver 127.0.0.11 valid=30s ipv6=off;
+  upstream fastapi_upstream {
+    server api:8000;   # внутрішній порт сервісу fastapi
+    keepalive 64;
+  }
 
   # --- HTTP→HTTPS + ACME
   server {
@@ -63,9 +67,9 @@ http {
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
      # --- FastAPI (ОДИН блок для всього API-трафіку)
     location ^~ /api/ {
-        rewrite /api/(.*) /$1 break;
+#         rewrite /api/(.*) /$1 break;
         # Важливо: використовуємо повне ім'я сервісу:порт і БЕЗ кінцевого `/`
-        proxy_pass http://api:8000/;
+      proxy_pass http://fastapi_upstream;   # без кінцевого /
 
         # Заголовки, буферизація та тайм-аути
         proxy_http_version 1.1;
@@ -82,19 +86,9 @@ http {
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
     }
-      location = /api/docs {
-        proxy_pass http://api:8000/api/docs;
-    }
-
-# #     ⚠️ Тільки openapi.json залишаємо окремо для Content-Type
-    location = /api/openapi.json {
-        proxy_pass http://api:8000/api/openapi.json;
-    }
-
-
-    location = /healthz { proxy_pass http://api:8000/healthz; } # Можна залишити для чистоти
-
-
+    location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
+    location /docs           { proxy_pass http://fastapi_upstream/docs; }
+    location /openapi.json   { proxy_pass http://fastapi_upstream/openapi.json; }
       # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
 
     # Блок №1: Обробка SPA-роутингу.
