--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -88,7 +88,8 @@ http {
     }
     location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
     location /docs           { proxy_pass http://fastapi_upstream/docs; }
-    location /openapi.json   { proxy_pass http://fastapi_upstream/openapi.json; }
+    location /openapi.json   { proxy_pass http://fastapi_upstream/openapi.json;
+     add_header Content-Type application/json;}
       # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
 
     # Блок №1: Обробка SPA-роутингу.
