--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -58,10 +58,10 @@ http {
     # --- health
 
     # --- головна (Dash)
-    location / {
+   location ^~ /dashboard {
+      # Важливо: використовуємо сліш у кінці, щоб вирізати /dashboard
       proxy_pass http://dash:8050/;
     }
-
     # --- FastAPI
    # ------------------------------------------------------------------
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
