--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -62,16 +62,16 @@ http {
       # Важливо: використовуємо сліш у кінці, щоб вирізати /dashboard
       proxy_pass http://dash:8050/;
     }
-    location / {
-        # Залиште цю логіку, якщо вам потрібен Dash як головна сторінка
-        # або якщо у вас є фронтенд на цьому шляху.
-        # АБО... направте його на ваш фронтенд:
-        # root /var/www/geoai-front/current;
-        # try_files $uri $uri/ =404;
-
-        # Якщо ви хочете, щоб Dash був корнем, використовуйте перенаправлення:
-        return 302 /dashboard;
-    }
+#     location / {
+#         # Залиште цю логіку, якщо вам потрібен Dash як головна сторінка
+#         # або якщо у вас є фронтенд на цьому шляху.
+#         # АБО... направте його на ваш фронтенд:
+#         # root /var/www/geoai-front/current;
+#         # try_files $uri $uri/ =404;
+#
+#         # Якщо ви хочете, щоб Dash був корнем, використовуйте перенаправлення:
+#         return 302 /dashboard;
+#     }
     # --- FastAPI
    # ------------------------------------------------------------------
     # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
