--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -58,7 +58,7 @@ http {
     # --- health
 
     # --- головна (Dash)
-   location ^~ /dashboard {
+   location ^~ /dashboard/ {
       # Важливо: використовуємо сліш у кінці, щоб вирізати /dashboard
       proxy_pass http://dash:8050/;
     }
