--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -96,9 +96,9 @@ http {
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
     }
-    location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
-    location /docs           { proxy_pass http://fastapi_upstream/docs; }
-    location /openapi.json   { proxy_pass http://fastapi_upstream/openapi.json;
+    location = api/healthz      { proxy_pass http://fastapi_upstream/healthz; }
+    location api/docs           { proxy_pass http://fastapi_upstream/docs; }
+    location api/openapi.json   { proxy_pass http://fastapi_upstream/openapi.json;
      add_header Content-Type application/json;}
       # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
 
