--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -97,9 +97,8 @@ http {
         proxy_send_timeout 3600s;
     }
     location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
-    location /docs           { proxy_pass http://fastapi_upstream/docs; }
-    location /openapi.json   { proxy_pass http://fastapi_upstream/openapi.json;
-     add_header Content-Type application/json;}
+    location = /docs         { return 302 /api/docs; }
+    location = /openapi.json { return 302 /api/openapi.json; }
       # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
 
     # Блок №1: Обробка SPA-роутингу.
