--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -96,14 +96,12 @@ http {
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
     }
-    location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
+#     location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
+
     location = /docs         { return 302 /api/docs; }
     location = /openapi.json { return 302 /api/openapi.json; }
-      # --- СЕКЦІЯ ДЛЯ ФРОНТЕНДУ (ПРАВИЛЬНА СТРУКТУРА) ---
 
-    # Блок №1: Обробка SPA-роутингу.
-    # Спрацьовує для шляхів типу /flood_scenarios/some/route
-    # і віддає index.html, щоб React Router міг працювати.
+
     location /flood_scenarios/ {
              alias /var/www/geoai-front/current/;
               try_files $uri $uri/ /flood_scenarios/index.html;
