--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -98,8 +98,8 @@ http {
     }
 #     location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
 
-    location = /docs         { return 302 /api/docs; }
-    location = /openapi.json { return 302 /api/openapi.json; }
+#     location = /docs         { return 302 /api/docs; }
+#     location = /openapi.json { return 302 /api/openapi.json; }
 
 
     location /flood_scenarios/ {
