--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -58,10 +58,13 @@ http {
     # --- health
 
     # --- головна (Dash)
-   location ^~ /dem/ {
+    location ^~ /dem/ {
       # Важливо: використовуємо сліш у кінці, щоб вирізати /dashboard
-      proxy_pass http://dash:8050/;
+      proxy_pass http://dash:8050;
+
     }
+     location = /dashboard { return 302 /dem/dashboard; }
+     location = /dem-diff { return 302 /dem/dem-diff; }
 #     location / {
 #         # Залиште цю логіку, якщо вам потрібен Dash як головна сторінка
 #         # або якщо у вас є фронтенд на цьому шляху.
