--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -60,7 +60,7 @@ http {
     # --- головна (Dash)
     location ^~ /dem/ {
       # Важливо: використовуємо сліш у кінці, щоб вирізати /dashboard
-      proxy_pass http://dash:8050;
+      proxy_pass http://dash:8050/;
 
     }
      location = /dashboard { return 302 /dem/dashboard; }
